--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 spring.application.name=scheduler
-spring.datasource.url=jdbc:h2:file:./demodb;AUTO_SERVER=TRUE;MODE=MySQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:file:./demodb;AUTO_SERVER=TRUE;MODE=MySQL
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.defer-datasource-initialization=true
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.hibernate.ddl-auto=create
+
 
 # Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Logging levels
+logging.level.root=INFO
