--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,17 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Logging levels
-logging.level.root=INFO
+logging.level.root=info
+
+# Disable automatic job execution on startup
+spring.batch.job.enabled=false
+
+# Spring Batch Schema Initialization
+spring.batch.jdbc.initialize-database=always
+
+# Scheduler Configuration
+# Email Task Job - runs every 60 seconds
+scheduler.email-task-rate=60000
+
+# Lab Removal Notifier Job - runs every 120 seconds (2 minutes)
+scheduler.lab-removal-notifier-rate=120000
